--- a/index.html
+++ b/index.html
@@ -1725,7 +1725,7 @@
 
                 <div class="form-group full-width">
                     <label for="website">현재 사용중인 자사몰 사이트 주소</label>
-                    <input type="url" id="website" name="website" placeholder="예: https://example.com">
+                    <input type="text" id="website" name="website" placeholder="예: www.example.com 또는 https://example.com">
                 </div>
 
                 <div class="form-group full-width">
