--- a/index.html
+++ b/index.html
@@ -1724,7 +1724,7 @@
                 </div>
 
                 <div class="form-group full-width">
-                    <label for="website">현재 사용중인 자사몰 사이트 주소</label>
+                    <label for="website">현재 사용중인 자사몰 사이트 주소 (선택)</label>
                     <input type="text" id="website" name="website" placeholder="예: www.example.com 또는 https://example.com">
                 </div>
 
